--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
             </div>
           </div>
           
-          <div class="boutton1">  
-            <button type="button" class="btn rounded-pill">BUY NOW <i class="bi bi-arrow-right-short"></i> </button>
+          <div class="boutton1 d-flex ms-5">  
+            <button type="button" class="btn rounded-pill ms-auto">BUY NOW <i class="bi bi-arrow-right-short"></i> </button>
         </div>
 
         </div>
@@ -199,7 +199,7 @@
 
     <!-------------------------------------------------------------section----------------------------------------------------------------------------------->
     <div class="container-fluid text-center">
-        <div class="row row-cols-md-6 bg-primary rounded-top-0 sect1 p-5">
+        <div class="row row-cols-md-6 rounded-top-0 sect1 p-5">
           <div class="col-Lg-6 col-md-6 col-sm-12 secti"> <br><br><br><br> <br><br>
             <h1 class="text-white">Build your next project faster with SB UI Kit Pro</h1>
             <p class="text-white">Welcome to SB UI Kit Pro, a toolkit for building beautiful web interfaces, created by the developmet team at Start Bootstrap</p>
